INTERNAL: downgrade to JAVA 11
Reviewed-by: Damian Śnieżek <dsniezek@silenteight.com>
Reviewed-by: Kamil Dzięcioł <kdzieciol@silenteight.com>
Merged from: https://gitlab.silenteight.com/all-in/core-bridge-recommendation-connector/-/merge_requests/14